assets/styles.css
:root {
    --blue:#4158D0;
    --purple:#C850C0;
    --yellow:#FFCC70;
    

    --gray-0:#f9f9fa;
    --gray-1:#eceeef;
    --gray-2:#eceeef;
    --gray-3:#cfd3d7;
    --gray-4:#bfc5c9;
    --gray-5:#adb4b9;
    --gray-6:#98a1a8;
    --gray-7:#98a1a8;
    --gray-8:#606e79;
    --gray-9:#454e55;

    --gradient: linear-gradient(to right, #eea2a2 0%, #bbc1bf 19%, #57c6e1 42%, #b49fda 79%, #7ac5d8 100%);

    --fs-h1: 3.5rem;
    --fs-h2: 2rem;
    --fs-h3: 1.5rem;
    --fs-body: 1rem;

    --ff-montserrat: 'Roboto', sans-serif;
    --ff-Playfair: 'Prompt', serif;
    --ff-Roboto: 'Roboto', sans-serif;
 
    font-family: 'Prompt', sans-serif;
    font-family: 'Roboto', sans-serif;
}

/* Develop later */
.nav-scrolled {
    background-color: white;
    color: black;
}

nav {
    position: fixed;
    background-color: white;
}

.hero {
    color: white;
    padding-top: 9rem;
    text-align: center;
    padding-bottom: 5rem;
    width: 100%;
    background-color: purple;
    background-image: var(--gradient);
    background-size: 600%;
    animation: move 10s alternate infinite;
}

@keyframes move {
    from {
        background-position: 0%;
    } 
    to {
        background-position: 100% 100%;
    }
}

.row>* {
    padding-left: 0px;
    padding-right: 0px;
}

.box {
    position: relative;
    margin: 3rem;
    min-width: 10rem;
    width: 100%;
    background-color: white;
    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.172);
}

.project-btn {
    position: absolute;
    bottom: 1rem;
}

body {
    font-family: var(--ff-Playfair);
    background-color: white;
}

.main-section   {
    background-color: white;
}

a {
    color: var(--gray);
}

#mug {
    color: var(--gray);
}

h1{
    font-size: var(--fs-h1);
}

h2{
    font-size: var(--fs-h2);
}

h3{
    font-size: var(--fs-h3);
}

/* Skills */
.skills-section{
    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.172);
}

.my-skills {
    padding-top: 3rem;
    text-align: center;
}

.skills-section {
    background-color: white;
    
}

.about-me {
    padding-top: 3rem;
    text-align: center;
}

h1, h2, h3 {
    font-weight:500;
}

#fullstack-dev {
    padding-bottom: 1.0rem;
}

header {
    background-color: var(--blue);
    color: var(--gray);
}

.project-header {
    text-align: center;
    padding: 3rem;
}

.lang-icons{
    text-align: center;
    font-size: 5em;
}

/* Footer */
.footer-section {
    text-align: center;
    padding: 3rem;
    background-color: white;
    width: 100%;
    box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.172);
}

#footer-row {
    background-color: white;
    padding-bottom: 2rem;
    padding-top: 1rem;
}

/* Projects */
.card-body {
    padding-bottom: 5rem;
}

.img-container {
    cursor: pointer;
    position: relative;
    text-align: center;
    color: white;
    background-color: rgb(84, 84, 84);
}

.live-demo {
    font-size: xx-large;
    text-decoration: none;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    opacity: 0;
}

.img-container:hover .live-demo{
    opacity: 1;
    color: white;
}

.img-container:hover {
    opacity: 1;
    color: white;
    filter: blur(4px);
    transition-duration: 100ms
}

.live-demo:hover .img {
    opacity: 0.6;
}

.img {
    max-width:100%;
    max-height:100%;
}

.img:hover {
    opacity: 0.6;
    filter: blur(4px);
    transition-duration: 100ms
}

#resume {
    border: solid 2px white;
    padding: 8px 15px;
    font-size: 2em;
    background-color: transparent;
    width: 6rem;
    border-radius: 20px;
    color: white;
    text-transform: uppercase;
    font-size: 12px;
    text-align: center;
    margin-top: 3rem;
    text-decoration: none;
}

#resume:hover {
    border: none;
    background-color: green;
    transition-duration: 100ms
}

#project-section {
    background-color: #98a1a81b;
}

.social-container{
    
    text-align: center;
}

.social{
    font-size: 2.0rem;
    margin: 1rem;
    text-decoration: none;
    color: var(--gray-9);
}




@media only screen and (max-width: 800px) {
    h1{
        font-size: 3em;
    }

    h2{
        font-size: 2em;
    }

    h3 {
        font-size: 1.5em;
    }

    .row>* {
        width: auto;
    }

    .lang-icons{
        font-size: 3em;
    }

    .row {
        --bs-gutter-x: 0;
        --bs-gutter-y: 0;
    }

    .project-row {
        flex-direction: column;
        width: auto;
    }
    .box {
        margin-left: 0;
        margin-right: 0;
    }
}

